adding a attribution column to the layers
